--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <div class="col-lg-3">
                     <img style="
                       vertical-align: middle;
-                      max-width:100%;" src=" /assets/img/avishkarlogo.png " alt=" ">
+                      max-width:100%;" src=" /assets/img/avishkarlogo.PNG " alt=" ">
                 </div>
             </div>
         </div>
